tests/miniJava/neg/006769_mutation.MiniJava
class java System.out.println { public static void Main ( String [ ] java ) { { } } }
